fixed overflow and animate

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,9 @@
   font-family: "Playfair Display";
 }
 
+html,
 body {
+  position: relative;
   overflow-x: hidden;
 }
 
